edit models folder

--- a/sequence_labeling.ipynb
+++ b/sequence_labeling.ipynb
@@ -3005,7 +3005,7 @@
     "\n",
     "        # Save the best model so far and early stop if validation loss plateaus\n",
     "        if not early_stopping.step(val_loss):\n",
-    "            torch.save(model.state_dict(), f\"models/{model_name}.pt\")\n",
+    "            torch.save(model.state_dict(), f\"models/sequence_labeling/{model_name}.pt\")\n",
     "        else:\n",
     "            print(\"Early stopping...\")\n",
     "            break\n",
