--- a/sequence_labeling.ipynb
+++ b/sequence_labeling.ipynb
@@ -3131,7 +3131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The partial function below is used to fix some parameters of the `train_val_test` function."
+    "The partial function below is used to fix some parameters of the `train_eval` function."
    ]
   },
   {
