--- a/sequence_labeling.ipynb
+++ b/sequence_labeling.ipynb
@@ -11985,6 +11985,20 @@
     "  _Zhiheng Huang, Wei Xu and Kai Yu (2015)_.\\\n",
     "  **Bidirectional LSTM-CRF Models for Sequence Tagging**."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Credits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some code blocks were taken from a notebook as part of an assignment for the NLP course of the Artificial Intelligence master's degree, at University of Bologna. The cited notebook is maintained by Andrea Galassi, Federico Ruggeri and Paolo Torroni."
+   ]
   }
  ],
  "metadata": {
